"Fixed the spacing on 4th row"

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 i {
-    font-size: 25pt;
+    font-size: 20pt;
 }
 
 input::-webkit-outer-spin-button,
